fix(Navigation/Flow): better z-index for dialogs [YTFRONT-5401]

--- a/packages/ui/src/ui/containers/App/App.scss
+++ b/packages/ui/src/ui/containers/App/App.scss
@@ -49,7 +49,7 @@ body {
     --tooltip-z-index: 70000;
     --bug-report-z-index: 60000;
     --dialog-suggest-z-index: 50000;
-    --dialog-z-index: 999;
+    --dialog-z-index: 1000;
     --dialog-backdrop-z-index: 6900;
     --aside-header-z-index: 1010;
     --query-editor-container-z-index: 1008;
